@@ -1,3 +1,4 @@
+* Paste on editable list create new records if needed
 * Drop support of Python 2.6
 * Allow to search on rec_name of Reference fields
 * Use local timezone
